--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <!--Font Awesome-->
     <script src="https://use.fontawesome.com/60e199c093.js"></script>
 
-    <title>React E-commerce</title>
+    <title>Aerolab Challenge E-commerce</title>
   </head>
   <body>
     <noscript>
